tests/error/misc_errors/return_flag_callable.err
Error: Invalid annotation (at $FILE:9:25)
  | 
7 | 
8 | @guppy.declare
9 | def foo(f: "Callable[[], qubit @owned]") -> None: ...
  |                          ^^^^^^^^^^^^ `@` type annotations are not allowed in this position

Guppy compilation failed due to 1 previous error
